# Omnibot

./: .env  .gitignore  .pylintrc  LICENSE.md  README.md  bot.py  config.json  keep_alive.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: codeql-analysis.yml  python.yml  semgrep.yml
commands/: help.py  owner.py  ping.py  say.py  ship.py  snap.py
